<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_todos"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/todos_los_generos" />
        <item android:id="@+id/nav_epico"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/poema_pico" />
        <item android:id="@+id/nav_XIX"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/literatura_siglo_xix" />
        <item android:id="@+id/nav_suspense"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/suspense" />
    </group>
        <item
            android:title="@string/acciones_adicionales">
            <menu>
            <item android:id="@+id/nav_preferencias"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/preferencias" />
            <item
                    android:id="@+id/nav_compartir"
                    android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/compartir" />
            </menu>
        </item>
</menu>